2004-08-10 09:00  PeterB

	* src/: balsa-mblist.c, mailbox-node.c, mailbox-node.h,
	save-restore.c: drop BalsaMailboxNode::expanded; use
	libbalsa_mailbox_get_exposed to decide whether to expand rows.
	* libbalsa/information.c: use one idle handler instead of four;
	check for NULL format string.

2004-08-08  Pawel Salek

	* libbalsa/imap-server.c: failed keep-alives are uninteresting.
	* libbalsa/imap/imap-commands.c: re-select message correctly.
	* src/Makefile.am: mark built sources correctly.
	* src/main.c: fix periodic expunge code.
	* src/sendmsg-window.c: remove '\n' added by ctime_r().

2004-08-08  Carlos Morgado  <chbm gnome.org>

	* src/main-window.c (show_about_box): update my email
	* libbalsa/rfc3156.c: unduplicate message

2004-08-08  Pawel Salek

	* NEWS, configure.in: release 2.2.2.
	* src/save-restore.c: switch SMTP TLS on if available.
	* src/main-window.c: menu item numbering fixes.
	* libbalsa/mailbox.h: mailbox is open even when eg. TREECLEANING.
	* sounds/newmail.wav: less disturbing newmail sound.
	* src/sendmsg-window.c: in-reply-to date must be in C locale.

2004-08-07  21:30 Pawel Salek

	* libbalsa/message.c: canonize headers.
	* src/main-window.c: touchscreen fixes.

2004-08-07  Albrecht Dreß

	* libbalsa/address.h: remove duplicate function prototype.
	* libbalsa/body.[hc]: add a "was_encrypted" flag to the body structure.
	* libbalsa/rfc3156.c: remember if a rfc 3156 body has been
	encrypted, recognise combined signed, fix bad return value.
	* src/balsa-message.c: MDN fixes to make it fully (hopefully) rfc
	3798 compliant.
	* src/information-dialog.c: sanitize messages.

2004-08-07  Pawel Salek

	* libbalsa/imap-server.c: only IMAP_CONNECT_FAILED is a network error.
	* libbalsa/libbalsa.c: display more info about certificates.
	* libbalsa/mailbox.h: use ::state to determine whether mailbox is open.
	* src/balsa-mblist.c: update only msg count for open mailboxes.
	* src/balsa-message.c: set libesmtp auth context only if smtp_user